# rs2-c

./: .gitignore  README.md  meson.build
include/: client.h  jbuf.h  rasterizer.h  region.h  signlink.h
include/collection/: deque.h  linkable.h
include/def/: gamefont.h  gameobjdef.h
include/scene/: worldcontroller.h
include/util/: color.h  util.h
src/: client.c  isaac.c  jbuf.c  meson.build  rasterizer.c  region.c  signlink.c
src/collection/: deque.c  linkable.c  meson.build
src/def/: gamefont.c  gameobjdef.c  meson.build
src/scene/: meson.build  worldcontroller.c
src/util/: meson.build  util.c
